--- a/agent/intents/cse-pmt-calc-unknown-other-child-support_usersays_en.json
+++ b/agent/intents/cse-pmt-calc-unknown-other-child-support_usersays_en.json
@@ -4,8 +4,8 @@
     "data": [
       {
         "text": "i dont know",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       },
       {
@@ -15,6 +15,7 @@
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -27,6 +28,7 @@
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -34,13 +36,14 @@
     "data": [
       {
         "text": "no idea",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       }
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -48,8 +51,8 @@
     "data": [
       {
         "text": "I don\u0027t know",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       },
       {
@@ -59,6 +62,7 @@
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -66,8 +70,8 @@
     "data": [
       {
         "text": "I\u0027m not sure",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       },
       {
@@ -77,6 +81,7 @@
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -84,13 +89,14 @@
     "data": [
       {
         "text": "I dont know",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       }
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   }
 ]
