--- a/agent/intents/cse-pmt-calc-unknown-tax-deductions_usersays_en.json
+++ b/agent/intents/cse-pmt-calc-unknown-tax-deductions_usersays_en.json
@@ -4,13 +4,14 @@
     "data": [
       {
         "text": "not sure",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": true
       }
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -18,8 +19,8 @@
     "data": [
       {
         "text": "i dont know",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       },
       {
@@ -29,6 +30,7 @@
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -40,8 +42,8 @@
       },
       {
         "text": "haven\u0027t received",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": true
       },
       {
@@ -51,6 +53,7 @@
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -62,13 +65,14 @@
       },
       {
         "text": "no idea",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       }
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -76,13 +80,14 @@
     "data": [
       {
         "text": "don\u0027t know",
-        "alias": "dont-know",
         "meta": "@dont-know",
+        "alias": "dont-know",
         "userDefined": false
       }
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   }
 ]
