--- a/agent/intents/cse-support-new-employer-unknown-phone_usersays_en.json
+++ b/agent/intents/cse-support-new-employer-unknown-phone_usersays_en.json
@@ -4,8 +4,8 @@
     "data": [
       {
         "text": "i don\u0027t know",
-        "alias": "dontKnow",
         "meta": "@dont-know",
+        "alias": "dontKnow",
         "userDefined": false
       },
       {
@@ -15,6 +15,7 @@
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -22,13 +23,14 @@
     "data": [
       {
         "text": "i dont have one",
-        "alias": "dontKnow",
         "meta": "@dont-know",
+        "alias": "dontKnow",
         "userDefined": false
       }
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   },
   {
@@ -36,13 +38,14 @@
     "data": [
       {
         "text": "i dont know it",
-        "alias": "dontKnow",
         "meta": "@dont-know",
+        "alias": "dontKnow",
         "userDefined": false
       }
     ],
     "isTemplate": false,
     "count": 0,
+    "lang": "en",
     "updated": 0
   }
 ]
