--- a/agent/intents/cse-appts-no-contacted.json
+++ b/agent/intents/cse-appts-no-contacted.json
@@ -31,15 +31,17 @@
       "parameters": [
         {
           "id": "d63e19b2-2c10-4dc4-9774-6f2462fd9225",
+          "name": "yes-no",
           "required": false,
           "dataType": "@yes-no",
-          "name": "yes-no",
           "value": "$yes-no",
+          "defaultValue": "",
+          "isList": false,
+          "prompts": [],
           "promptMessages": [],
           "noMatchPromptMessages": [],
           "noInputPromptMessages": [],
-          "outputDialogContexts": [],
-          "isList": false
+          "outputDialogContexts": []
         }
       ],
       "messages": [
@@ -49,7 +51,7 @@
           "textToSpeech": "",
           "lang": "en",
           "speech": [
-            "You generally aren't required to schedule an appointment on your own.<br/><br/>If we require an appointment, you will receive a notice letter to appear at a District office."
+            "You generally aren\u0027t required to schedule an appointment on your own.\u003cbr/\u003e\u003cbr/\u003eIf we require an appointment, you will receive a notice letter to appear at a District office."
           ],
           "condition": ""
         },
@@ -59,7 +61,7 @@
           "textToSpeech": "",
           "lang": "en",
           "speech": [
-            "If you have urgent questions, you can contact support at <a href=\"tel:+18778824916\">1-877-882-4916</a>.<br/><br/>You may visit any office between 8:00 am and 5:00 pm, Monday through Friday, excluding holidays, to obtain information about your case."
+            "If you have urgent questions, you can contact support at \u003ca href\u003d\"tel:+18778824916\"\u003e1-877-882-4916\u003c/a\u003e.\u003cbr/\u003e\u003cbr/\u003eYou may visit any office between 8:00 am and 5:00 pm, Monday through Friday, excluding holidays, to obtain information about your case."
           ],
           "condition": ""
         },
