--- a/functions/package.json
+++ b/functions/package.json
@@ -21,35 +21,43 @@
     "lint-fix": "npx eslint '**/*.js' --fix"
   },
   "dependencies": {
-    "@google-cloud/automl": "^1.7.3",
-    "@google-cloud/storage": "^5.1.2",
+    "@google-cloud/automl": "^2.2.0",
+    "@google-cloud/storage": "^5.3.0",
     "@types/date-fns": "^2.6.0",
-    "actions-on-google": "^2.12.0",
-    "camelcase": "^5.3.1",
+    "actions-on-google": "^2.13.0",
+    "camelcase": "^6.0.0",
     "cors": "^2.8.5",
-    "date-fns": "^1.30.1",
-    "dialogflow": "^0.12.2",
+    "date-fns": "^2.16.1",
+    "@google-cloud/dialogflow": "^3.3.0",
     "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
     "dotenv": "^8.0.0",
-    "firebase-admin": "^9.1.0",
-    "firebase-functions": "^3.9.1",
-    "firebase-tools": "^8.7.0",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
+    "firebase-tools": "^8.10.0",
     "glob": "^7.1.4",
     "grpc": "^1.24.3",
-    "libphonenumber-js": "^1.7.18",
-    "lodash": "^4.17.15",
-    "node-fetch": "^2.6.0",
+    "libphonenumber-js": "^1.7.58",
+    "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1",
     "parse-address": "^1.1.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sanitize-html": "^1.27.3",
-    "validator": "^11.0.0"
+    "validator": "^13.1.1",
+    "bufferutil": "^4.0.1",
+    "utf-8-validate": "^5.0.2",
+    "canvas": "^2.5.0"
+  },
+  "peerDependencies": {
+    "bufferutil": "^4.0.1",
+    "utf-8-validate": "^5.0.2",
+    "canvas": "^2.5.0"
   },
   "private": true,
   "devDependencies": {
-    "eslint": "^7.2.0",
-    "firebase-functions-test": "^0.1.6",
-    "jest": "^24.8.0"
+    "eslint": "^7.9.0",
+    "firebase-functions-test": "^0.2.2",
+    "jest": "^26.4.2"
   },
   "engines": {
     "node": "10"
