#414 - Payment Calculator intents converted

--- a/agent/intents/cse-pmt-calc-unknown-income.json
+++ b/agent/intents/cse-pmt-calc-unknown-income.json
@@ -54,6 +54,20 @@
           "title": "",
           "textToSpeech": "",
           "lang": "en",
+          "speech": [
+            "You can find your income statement on documents like a paystub or W-2 form. I can only estimate your child support payments if you know your income."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "4",
+          "title": "",
+          "payload": {
+            "suggestions": [],
+            "handleEndConversation": true
+          },
+          "textToSpeech": "",
+          "lang": "en",
           "condition": ""
         }
       ],
