--- a/agent/intents/cse-pmt-calc-unknown-ss-deductions.json
+++ b/agent/intents/cse-pmt-calc-unknown-ss-deductions.json
@@ -13,6 +13,16 @@
       "affectedContexts": [
         {
           "name": "waiting-pmt-calc-retirement-contributions",
+          "lifespan": 3,
+          "parameters": {}
+        },
+        {
+          "name": "waiting-pmt-calc-unknown-deductions",
+          "lifespan": 3,
+          "parameters": {}
+        },
+        {
+          "name": "waiting-pmt-calc-retirement-contributions",
           "lifespan": 0,
           "parameters": {}
         },
@@ -47,6 +57,20 @@
         {
           "type": "0",
           "title": "",
+          "textToSpeech": "",
+          "lang": "en",
+          "speech": [
+            "Please provide an estimate of your <strong>social security contributions</strong> to continue with the estimation."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "4",
+          "title": "",
+          "payload": {
+            "suggestions": [],
+            "handleEndConversation": false
+          },
           "textToSpeech": "",
           "lang": "en",
           "condition": ""
