--- a/agent/intents/cse-pmt-calc-unknown-tax-deductions.json
+++ b/agent/intents/cse-pmt-calc-unknown-tax-deductions.json
@@ -12,6 +12,16 @@
       "action": "",
       "affectedContexts": [
         {
+          "name": "waiting-pmt-calc-ss-deductions",
+          "lifespan": 3,
+          "parameters": {}
+        },
+        {
+          "name": "waiting-pmt-calc-unknown-deductions",
+          "lifespan": 3,
+          "parameters": {}
+        },
+        {
           "name": "waiting-pmt-calc-unknown-tax-deductions",
           "lifespan": 0,
           "parameters": {}
@@ -47,6 +57,20 @@
         {
           "type": "0",
           "title": "",
+          "textToSpeech": "",
+          "lang": "en",
+          "speech": [
+            "Please provide an estimate of your federal and state taxes to continue with the estimation."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "4",
+          "title": "",
+          "payload": {
+            "suggestions": [],
+            "handleEndConversation": false
+          },
           "textToSpeech": "",
           "lang": "en",
           "condition": ""
