--- a/agent/intents/cse-appts-yes-contacted.json
+++ b/agent/intents/cse-appts-yes-contacted.json
@@ -1,51 +1,85 @@
 {
-  "id": "6d67782c-1215-45c9-a3e7-6811109ffc54",
-  "name": "cse-appts-yes-contacted",
-  "auto": true,
-  "contexts": [
-    "waiting-appts-yes-contacted",
-    "cse-subject-matter"
-  ],
-  "responses": [
-    {
-      "resetContexts": false,
-      "action": "",
-      "affectedContexts": [
+    "id": "6d67782c-1215-45c9-a3e7-6811109ffc54",
+    "name": "cse-appts-yes-contacted",
+    "auto": true,
+    "contexts": [
+        "waiting-appts-yes-contacted",
+        "cse-subject-matter"
+    ],
+    "responses": [
         {
-          "name": "waiting-appts-yes-contacted",
-          "lifespan": 0,
-          "parameters": {}
-        },
-        {
-          "name": "waiting-appts-not-contacted",
-          "lifespan": 0,
-          "parameters": {}
-        },
-        {
-          "name": "cse-subject-matter",
-          "lifespan": 99,
-          "parameters": {}
+            "resetContexts": false,
+            "action": "",
+            "affectedContexts": [
+                {
+                    "name": "waiting-appts-yes-contacted",
+                    "lifespan": 0,
+                    "parameters": {}
+                },
+                {
+                    "name": "waiting-appts-not-contacted",
+                    "lifespan": 0,
+                    "parameters": {}
+                },
+                {
+                    "name": "cse-subject-matter",
+                    "lifespan": 99,
+                    "parameters": {}
+                }
+            ],
+            "parameters": [],
+            "messages": [
+                {
+                    "type": "0",
+                    "title": "",
+                    "textToSpeech": "",
+                    "lang": "en",
+                    "speech": [
+                        "Plan to appear at the office listed in your notice letter during the specified time frame."
+                    ],
+                    "condition": ""
+                },
+                {
+                    "type": "0",
+                    "title": "",
+                    "textToSpeech": "",
+                    "lang": "en",
+                    "speech": [
+                        "Failure to appear in accordance with notice instructions may result in your case being closed and your public assistance benefits may be sanctioned."
+                    ],
+                    "condition": ""
+                },
+                {
+                    "type": "0",
+                    "title": "",
+                    "textToSpeech": "",
+                    "lang": "en",
+                    "speech": [
+                        "If you have urgent questions, or cannot appear during the allotted time, you can contact support at <a href=\"tel:+18778824916\">1-877-882-4916</a>."
+                    ],
+                    "condition": ""
+                },
+                {
+                    "type": "4",
+                    "title": "",
+                    "payload": {
+                        "suggestions": [],
+                        "handleEndConversation": true
+                    },
+                    "textToSpeech": "",
+                    "lang": "en",
+                    "condition": ""
+                }
+            ],
+            "speech": []
         }
-      ],
-      "parameters": [],
-      "messages": [
-        {
-          "type": "0",
-          "title": "",
-          "textToSpeech": "",
-          "lang": "en",
-          "condition": ""
-        }
-      ],
-      "speech": []
-    }
-  ],
-  "priority": 500000,
-  "webhookUsed": true,
-  "webhookForSlotFilling": false,
-  "fallbackIntent": false,
-  "events": [],
-  "conditionalResponses": [],
-  "condition": "",
-  "conditionalFollowupEvents": []
+    ],
+    "priority": 500000,
+    "webhookUsed": true,
+    "webhookForSlotFilling": false,
+    "fallbackIntent": false,
+    "events": [],
+    "conditionalResponses": [],
+    "condition": "",
+    "conditionalFollowupEvents": []
 }
