--- a/hosting/testHarness/package.json
+++ b/hosting/testHarness/package.json
@@ -4,10 +4,21 @@
   "private": true,
   "dependencies": {
     "@cambriasolutions/chatframe": "1.19.44",
+    "@types/googlemaps": "^3.0.0",
+    "@types/markerclustererplus": "^2.1.29",
     "latest": "^0.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "node-sass": "^4.0.0",
+    "sass": "^1.3.0",
+    "fibers": "^3.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.2.1",
+    "jest": "^26.0.0",
+    "webpack-cli": "^3.0.0",
+    "eslint": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
