--- a/hosting/testHarness/package.json
+++ b/hosting/testHarness/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^16.6.3",
     "react-scripts": "3.4.3",
     "node-sass": "^4.0.0",
-    "sass": "^1.3.0",
-    "fibers": "^3.1.0"
+    "sass": "^1.3.0"
   },
   "devDependencies": {
     "typescript": "^3.2.1",
