--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/automl": "^2.2.0",
+    "@google-cloud/dialogflow": "^3.3.0",
     "date-fns": "^2.16.1",
     "dialogflow": "^4.0.3",
     "dotenv": "^8.2.0",
