--- a/hosting/analytics/package.json
+++ b/hosting/analytics/package.json
@@ -11,6 +11,7 @@
     "bufferutil": "^4.0.1",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "exceljs": "^4.1.1",
     "fibers": "5.0.0",
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
