Initial pass at moving webchat core to mdhs repo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
     "firestore",
     "pubsub",
     "uuidv",
-    "webhook"
+    "webhook",
+    "tetris"
   ],
   "git.autofetch": true,
   "javascript.updateImportsOnFileMove.enabled": "always",
