#498 - added the plugin code to the mdhs repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,14 +105,14 @@ jobs:
       - checkout
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd webchat-core && npm install
+      - run: cd chatframe/public/app && npm install
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - webchat-core/node_modules
+            - chatframe/public/app/node_modules
       - run:
-          name: "Add env variables to webchat-core folder"
-          command: cd webchat-core && echo
+          name: "Add env variables to chatframe/public/app folder"
+          command: cd chatframe/public/app && echo
             "REACT_APP_GOOGLE_MAPS_KEY=<< parameters.googleMapsKey >>
 
             REACT_APP_EVENT_URL=<< parameters.eventUrl >>
@@ -122,8 +122,8 @@ jobs:
             REACT_APP_FEEDBACK_URL=<< parameters.feedbackURL >>" > .env
 
       - run:
-          name: "Add env variables to webchat-core folder"
-          command: cd webchat-core && npm run build
+          name: "Add env variables to chatframe/public/app folder"
+          command: cd chatframe/public/app && npm run build
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN -P << parameters.firebaseProjectId >>
 
