Moved the create plugin script into the scripts folder

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -7,13 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "populateScripts": "node populateMlCategoriesCollection.js && node populateIntentsCollection.js && node populateIntentSuggestions.js",
     "lint": "npx eslint '**/*.js'",
-    "lint-fix": "npx eslint '**/*.js' --fix"
+    "lint-fix": "npx eslint '**/*.js' --fix",
+    "generate-plugin": "cd ../chatframe/public/app && npm install && npm run build && cd ../../../scripts/util && node createPluginZip.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/automl": "^2.2.0",
     "@google-cloud/dialogflow": "^3.3.0",
+    "archiver": "^5.0.2",
     "date-fns": "^2.16.1",
     "dialogflow": "^4.0.3",
     "dotenv": "^8.2.0",
