--- a/agent/intents/snap-application_usersays_en.json
+++ b/agent/intents/snap-application_usersays_en.json
@@ -1,5 +1,249 @@
 [
   {
+    "id": "83907001-e29d-4a26-8bc0-7750f2fc30a0",
+    "data": [
+      {
+        "text": "Re-certification of SNAP",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "89f8ddf9-9a78-4492-851e-817a79041ce2",
+    "data": [
+      {
+        "text": "How do I receritfy my snap case",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "c057de8e-b3fd-4c2f-b1d0-dd7091d4de42",
+    "data": [
+      {
+        "text": "Reapply online",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "57792f6f-5fed-4fc6-a5d0-7c27c16ac9dd",
+    "data": [
+      {
+        "text": "I need to reapply",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 1,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "27c0f600-78c2-4fb4-91b3-41f0fccbdbb8",
+    "data": [
+      {
+        "text": "I\u0027m trying to find recertification letter to sign",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "d1f6a90e-f5c5-4a42-ad35-046b03b5d8b4",
+    "data": [
+      {
+        "text": "I\u0027ve been denied when can I reapply",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "0a148bf2-e968-47e5-8e6a-baf72ef4fcf7",
+    "data": [
+      {
+        "text": "When can I reapply after I\u0027ve been canceled",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "84c1ea92-7f75-4605-bd90-09da94e256dd",
+    "data": [
+      {
+        "text": "Im trying to  mail my renewl application but they didn\u0027t  send me anything with the mailing  address",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "1ceddf51-6c60-4b7f-ba22-0b48d7d39552",
+    "data": [
+      {
+        "text": "Trying to recertification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "8c0c5929-ef57-4051-89cc-b135543dbe36",
+    "data": [
+      {
+        "text": "How do i recertify",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "61948de7-b632-4463-b344-5648e90de5a0",
+    "data": [
+      {
+        "text": "Renew certification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "42fab265-9977-4ab3-adc2-187c90bedd51",
+    "data": [
+      {
+        "text": "It\u0027s time for me to recertified",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "9e5e3148-b781-431f-96cd-4710dbc87227",
+    "data": [
+      {
+        "text": "I\u0027m trying to do my recertification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "a26cb476-a796-4978-a5d0-a165c2eefc1c",
+    "data": [
+      {
+        "text": "I have covid ",
+        "userDefined": false
+      },
+      {
+        "text": "19",
+        "meta": "@sys.number",
+        "alias": "number",
+        "userDefined": false
+      },
+      {
+        "text": " how can I do a recertification for snap",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "f1fb2736-b8cd-4a1f-a4cc-bb76e486f49e",
+    "data": [
+      {
+        "text": "can I recertify online?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "b7cf3df0-3e53-4d4e-9945-ed659ea8555c",
+    "data": [
+      {
+        "text": "I\u0027m trying to do a recertification with SNAP",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "4ae17ffe-54d9-43be-91dc-78428b0b903e",
+    "data": [
+      {
+        "text": "Recertification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "cc0b984f-6baf-4a08-a183-ed8294fbea1d",
+    "data": [
+      {
+        "text": "Recertify",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
     "id": "f5aa740f-7381-4773-9d05-1c470190b3e4",
     "data": [
       {
